# Dmx-Forge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.traefik.yml  docker-compose.yml
crates/dmxforge/: Cargo.toml
crates/dmxforge/migrations/: 202603130001_initial_schema.sql  202603180001_user_permissions.sql
crates/dmxforge/src/: config.rs  lib.rs  main.rs
crates/dmxforge/src/auth/: mod.rs
crates/dmxforge/src/db/: delivery.rs  mod.rs  settings.rs  stats.rs  user.rs  webhook.rs
crates/dmxforge/src/discord/: mod.rs
crates/dmxforge/src/web/: mod.rs
crates/dmxforge/src/webhook/: mod.rs  model.rs  utils.rs
crates/dmxforge/src/webhook/provider/: github.rs  gitlab.rs  mod.rs
crates/dmxforge/static/: app.css  app.js
crates/dmxforge/templates/: base.html  dashboard.html  deliveries.html  delivery_detail.html  destinations.html  login.html  message_templates.html  rules.html  section.html  setup.html  sources.html  users.html
deploy/: Caddyfile.example  traefik.yml
docs/: configuration.md  contributing.md  deployment-traefik.md  payload-examples.md  templates.md  ui-overview.md
