[workspace]
members = ["crates/dmxforge"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
askama = "0.12.1"
axum = { version = "0.8.2", features = ["json", "macros"] }
chrono = { version = "0.4.41", features = ["clock", "serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
minijinja = { version = "2.12.0", features = ["builtins", "json", "loader"] }
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.8.4", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio-rustls", "sqlite", "uuid"] }
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-gzip", "fs", "request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
