[package]
name = "dmxforge"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
askama.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
hex.workspace = true
hmac.workspace = true
minijinja.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
